force-app/main/default/objects/Encuestas_CX__c/Encuestas_CX__c.object-meta.xml
<CustomObject>
    <label>Encuestas CX</label>
    <nameField>
        <displayFormat>CX-{000000}</displayFormat>
        <label>Nro de Encuestas CX</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas CX</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>