force-app/main/default/objects/Encuestas_CX__c/fields/Alg_n_comentario_para_mejorar_servicio__c.field-meta.xml
<CustomField>
    <fullName>Alg_n_comentario_para_mejorar_servicio__c</fullName>
    <inlineHelpText>¿Querés dejar algún otro comentario para mejorar nuestro servicio?</inlineHelpText>
    <label>¿Algún comentario para mejorar servicio?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>