force-app/main/default/objects/Encuestas_CX__c/fields/Aspectos_a_mejorar__c.field-meta.xml
<CustomField>
    <fullName>Aspectos_a_mejorar__c</fullName>
    <inlineHelpText>¿Cómo podríamos generar una mejor experiencia?</inlineHelpText>
    <label>Aspectos a mejorar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>