force-app/main/default/objects/Encuestas_CX__c/fields/C_mo_eval_a_servicio_Prof_salud__c.field-meta.xml
<CustomField>
    <fullName>C_mo_eval_a_servicio_Prof_salud__c</fullName>
    <inlineHelpText>¿Cómo evaluaría el servicio brindado por los Profesionales de la Salud que lo siguen?</inlineHelpText>
    <label>Cómo evalúa servicio Prof. salud?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>No aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>