force-app/main/default/objects/Encuestas_CX__c/fields/C_mo_evalua_calidad_servicio_logistico__c.field-meta.xml
<CustomField>
    <fullName>C_mo_evalua_calidad_servicio_logistico__c</fullName>
    <inlineHelpText>¿Cómo evaluaría la calidad del servicio logístico?</inlineHelpText>
    <label>Cómo evalua calidad servicio logistico?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>