force-app/main/default/objects/Encuestas_CX__c/fields/C_mo_result_dicha_experiencia__c.field-meta.xml
<CustomField>
    <fullName>C_mo_result_dicha_experiencia__c</fullName>
    <label>¿Cómo resultó dicha experiencia?</label>
    <type>TextArea</type>
</CustomField>