force-app/main/default/objects/Encuestas_CX__c/fields/Canales_de_Atenci_n__c.field-meta.xml
<CustomField>
    <fullName>Canales_de_Atenci_n__c</fullName>
    <inlineHelpText>¿Conoce nuestros canales de atención?</inlineHelpText>
    <label>Canales de Atención</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>Página Web</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>