force-app/main/default/objects/Encuestas_CX__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Encuestas CX</relationshipLabel>
    <relationshipName>Encuestas_CX</relationshipName>
    <type>Lookup</type>
</CustomField>