force-app/main/default/objects/Encuestas_CX__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Desea dejar alguna sugerencia de mejora?</label>
    <length>225</length>
    <type>Text</type>
</CustomField>