force-app/main/default/objects/Encuestas_CX__c/fields/Comentarios_generales__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_generales__c</fullName>
    <inlineHelpText>¿Tienes algún otro comentario o sugerencia para nosotros?</inlineHelpText>
    <label>Comentarios generales</label>
    <type>TextArea</type>
</CustomField>