force-app/main/default/objects/Encuestas_CX__c/fields/Conoce_los_canales_de_venta_oficiales__c.field-meta.xml
<CustomField>
    <fullName>Conoce_los_canales_de_venta_oficiales__c</fullName>
    <description>¿Conoce nuestros canales de venta oficial?</description>
    <inlineHelpText>¿Conoce nuestros canales de venta oficial?</inlineHelpText>
    <label>¿Conoce los canales de venta oficiales?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conoce D2C y MELI</fullName>
            </value>
            <value>
                <fullName>Conoce D2C</fullName>
            </value>
            <value>
                <fullName>Conoce MELI</fullName>
            </value>
            <value>
                <fullName>No los conoce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>