force-app/main/default/objects/Encuestas_CX__c/fields/Conoce_nuestras_redes_sociales__c.field-meta.xml
<CustomField>
    <fullName>Conoce_nuestras_redes_sociales__c</fullName>
    <label>¿Conoce nuestras redes sociales?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si, conozco y sigo</fullName>
            </value>
            <value>
                <fullName>Si, conozco pero no sigo</fullName>
            </value>
            <value>
                <fullName>No conozco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>