force-app/main/default/objects/Encuestas_CX__c/fields/Contanos_tu_experiencia_con_Nutricia__c.field-meta.xml
<CustomField>
    <fullName>Contanos_tu_experiencia_con_Nutricia__c</fullName>
    <label>Contanos tu experiencia con Nutricia</label>
    <length>225</length>
    <type>Text</type>
</CustomField>