force-app/main/default/objects/Encuestas_CX__c/fields/Continua_canal_venta_habitual__c.field-meta.xml
<CustomField>
    <fullName>Continua_canal_venta_habitual__c</fullName>
    <description>¿Continúa adquiriendo el producto a través del canal habitual, como lo hacía antes del reclamo?</description>
    <inlineHelpText>¿Continúa adquiriendo el producto a través del canal habitual, como lo hacía antes del reclamo?</inlineHelpText>
    <label>¿Continua con canal de venta habitual?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Le resulta indistinto</fullName>
            </value>
            <value>
                <fullName>Habitualmente cambia el canal de compra, más allá del reclamo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>