force-app/main/default/objects/Encuestas_CX__c/fields/Continuo_consumiendo_la_misma_formula__c.field-meta.xml
<CustomField>
    <fullName>Continuo_consumiendo_la_misma_formula__c</fullName>
    <description>¿El bebé/niño continuó consumiendo la misma fórmula después del reclamo?</description>
    <inlineHelpText>¿El bebé/niño continuó consumiendo la misma fórmula después del reclamo?</inlineHelpText>
    <label>¿Continuo consumiendo la misma formula?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>