force-app/main/default/objects/Encuestas_CX__c/fields/Coordinacion_Capacitacion_con_antelacion__c.field-meta.xml
<CustomField>
    <fullName>Coordinacion_Capacitacion_con_antelacion__c</fullName>
    <inlineHelpText>La capacitación sobre el uso de la Bomba Enteral, fué coordinada con antelación por el Lic. En Enfermería interviniente?</inlineHelpText>
    <label>Coordinacion Capacitacion con antelación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>