force-app/main/default/objects/Encuestas_CX__c/fields/CSAT_Comunicaci_n__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Comunicaci_n__c</fullName>
    <inlineHelpText>Del 1 al 10, ¿Qué tan satisfecho está con la información que recibe y con el plazo de respuesta?</inlineHelpText>
    <label>CSAT Comunicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>