force-app/main/default/objects/Encuestas_CX__c/fields/CSAT_HCP__c.field-meta.xml
<CustomField>
    <fullName>CSAT_HCP__c</fullName>
    <inlineHelpText>Del 1 al 10, ¿Cómo valora el servicio de Profesionales de la salud? (Autocuidado con bomba y C. Completo y C. Personalizado)</inlineHelpText>
    <label>CSAT HCPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>