force-app/main/default/objects/Encuestas_CX__c/fields/CSAT_Visitas_Virtuales__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Visitas_Virtuales__c</fullName>
    <inlineHelpText>Del 1 al 10 ¿Cómo valora las visitas virtuales implementadas por contexto COVID? (Cuidado completo y Personalizado)</inlineHelpText>
    <label>CSAT Visitas Virtuales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>