force-app/main/default/objects/Encuestas_CX__c/fields/Cual_de_estas_opciones_valora_m_s__c.field-meta.xml
<CustomField>
    <fullName>Cual_de_estas_opciones_valora_m_s__c</fullName>
    <label>¿Cual de estas opciones valora más?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domicilio</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Pick up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>