force-app/main/default/objects/Encuestas_CX__c/fields/Cuenta_de_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_de_Paciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta de Paciente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Paciente Best Care, Paciente Regular, Consumidor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Encuestas CX</relationshipLabel>
    <relationshipName>Encuestas_CX</relationshipName>
    <type>Lookup</type>
</CustomField>