force-app/main/default/objects/Encuestas_CX__c/fields/Desea_dejar_alguna_sugerencia_de_mejora__c.field-meta.xml
<CustomField>
    <fullName>Desea_dejar_alguna_sugerencia_de_mejora__c</fullName>
    <label>Desea dejar alguna sugerencia de mejora?</label>
    <length>225</length>
    <type>Text</type>
</CustomField>