force-app/main/default/objects/Encuestas_CX__c/fields/El_paciente_utiliza_bomba_alim_enteral__c.field-meta.xml
<CustomField>
    <fullName>El_paciente_utiliza_bomba_alim_enteral__c</fullName>
    <inlineHelpText>Actualmente el paciente se encuentra utilizando la bomba de alimentación enteral?</inlineHelpText>
    <label>El paciente utiliza bomba alim. enteral?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>