force-app/main/default/objects/Encuestas_CX__c/fields/En_caso_de_quue_la_respuesta_sea_Si__c.field-meta.xml
<CustomField>
    <fullName>En_caso_de_quue_la_respuesta_sea_Si__c</fullName>
    <label>En caso de que la respuesta sea Sí¿Cúal?</label>
    <type>TextArea</type>
</CustomField>