force-app/main/default/objects/Encuestas_CX__c/fields/Expectativa_Entregas__c.field-meta.xml
<CustomField>
    <fullName>Expectativa_Entregas__c</fullName>
    <inlineHelpText>¿Cuál es su expectativa sobre tiempos de entrega?</inlineHelpText>
    <label>Expectativa Entregas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 hs</fullName>
            </value>
            <value>
                <fullName>48 hs</fullName>
            </value>
            <value>
                <fullName>72 hs</fullName>
            </value>
            <value>
                <fullName>4 días</fullName>
            </value>
            <value>
                <fullName>5 días</fullName>
            </value>
            <value>
                <fullName>+ de 5 días</fullName>
            </value>
            <value>
                <fullName>+ 96 hs</fullName>
                <isActive>false</isActive>
                <label>+ 96 hs</label>
            </value>
            <value>
                <fullName>96 hs</fullName>
                <isActive>false</isActive>
                <label>96 hs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>