force-app/main/default/objects/Encuestas_CX__c/fields/Expectativas_NO_cumplidas__c.field-meta.xml
<CustomField>
    <fullName>Expectativas_NO_cumplidas__c</fullName>
    <description>En caso de haber otorgado puntaje menor a 9 en cualquiera de las dos preguntas anteriores, ¿Cuál era su expectativa?</description>
    <inlineHelpText>En caso de haber otorgado puntaje menor a 9 en cualquiera de las dos preguntas anteriores, ¿Cuál era su expectativa?</inlineHelpText>
    <label>Expectativas NO cumplidas</label>
    <type>TextArea</type>
</CustomField>