force-app/main/default/objects/Encuestas_CX__c/fields/Fecha_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Encuesta__c</fullName>
    <inlineHelpText>Por favor, indique la fecha del día de hoy</inlineHelpText>
    <label>Fecha Encuesta</label>
    <type>Date</type>
</CustomField>