force-app/main/default/objects/Encuestas_CX__c/fields/Identifica_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Identifica_Servicio__c</fullName>
    <inlineHelpText>¿Identifica el servicio recibido con Best Care?</inlineHelpText>
    <label>Identifica Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí, lo identifica</fullName>
            </value>
            <value>
                <fullName>Lo identifica parcialmente</fullName>
            </value>
            <value>
                <fullName>No lo identifica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>