force-app/main/default/objects/Encuestas_CX__c/fields/Info_Adicional__c.field-meta.xml
<CustomField>
    <fullName>Info_Adicional__c</fullName>
    <inlineHelpText>¿Necesitan algún tipo de información o servicio para poder llevar adelante el tratamiento de una mejor manera? ¿Cuál?</inlineHelpText>
    <label>Info Adicional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>