force-app/main/default/objects/Encuestas_CX__c/fields/Material_Audiovisual_en_Capacitacion__c.field-meta.xml
<CustomField>
    <fullName>Material_Audiovisual_en_Capacitacion__c</fullName>
    <inlineHelpText>Al finalizar la Capacitación, se te brindó material audiovisual (videos) de soporte?</inlineHelpText>
    <label>Material Audiovisual en Capacitación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>