force-app/main/default/objects/Encuestas_CX__c/fields/Medios_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Medios_de_Contacto__c</fullName>
    <inlineHelpText>¿Por qué medio prefiere que lo contactemos? WA – Teléfono – Mail – SMS - Indistinto</inlineHelpText>
    <label>Medios de Contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Indistinto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>