force-app/main/default/objects/Encuestas_CX__c/fields/Modalidad_Capacitacion_Uso_Bomba_Enteral__c.field-meta.xml
<CustomField>
    <fullName>Modalidad_Capacitacion_Uso_Bomba_Enteral__c</fullName>
    <inlineHelpText>La Modalidad de la Capacitación del uso de la Bomba Enteral brindada por el Lic. de Enfermería fue:</inlineHelpText>
    <label>Modalidad Capacitación Uso Bomba Enteral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presencial</fullName>
            </value>
            <value>
                <fullName>Por Video Llamada</fullName>
            </value>
            <value>
                <fullName>Solo por llamada telefónica (sin video)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>