force-app/main/default/objects/Encuestas_CX__c/fields/Motivo_del_cambio__c.field-meta.xml
<CustomField>
    <fullName>Motivo_del_cambio__c</fullName>
    <description>En caso de haber cambiado, ¿por qué motivo lo hizo?</description>
    <inlineHelpText>En caso de haber cambiado, ¿por qué motivo lo hizo?</inlineHelpText>
    <label>Motivo del cambio</label>
    <type>TextArea</type>
</CustomField>